syntax = "proto3";
package Post;
option go_package = "./compiles";
import "google/protobuf/timestamp.proto";

message SinglePostResponse{
  string Title = 1;
  int32 UserID = 2;
  string Body  = 3;

  google.protobuf.Timestamp CreatedAt = 4;
  google.protobuf.Timestamp UpdatedAt = 5;
}

message RetrievePost{
  int32 PostId = 1;
}

service PostService {
  rpc GetSinglePost(RetrievePost) returns (SinglePostResponse);
}